examples/invalid/not_declared/track.vbr
moderato() {
    |>(2 * play f with (20) + 10)|
    |>(play g and min)|
}